src/.vuepress/styles/index.scss
a.vp-skip-link.sr-only{
	display: none;
}

.docsearch-modal-footer-logo {
	display: none;
}

.vp-site-name {
	display: none;
}

.vp-hero-info-wrapper {
	min-height: 400px;
}

.vp-highlight-item-wrapper {
	transition: all 300ms;
}

.vp-page.not-found .action-button {
	border-radius: 1rem;
}

.error-hint{	
	display: none;
}

.vp-feature-item {
	@media (width >= 1440px) {
		flex-basis: calc(33% - 3rem);
	}
}

.vp-hero-title{
	background-image: linear-gradient(45deg, #d94853 0%, #be3b44 50%, #a8343e 100%);
}

a.route-link.auto-link.vp-hero-action.primary {
  	background: linear-gradient(45deg, #a8343e 0%, #be3b44 50%, #d34a45 100%);
  	border: none;
}

a.route-link.vp-feature-item.link{
	box-sizing: border-box;
	border: 2px solid rgba(180, 59, 69, 0.45);
	background-color: rgba(180, 59, 69, 0.10);
}

a.route-link.vp-feature-item.link:hover{
	border-color: rgba(180, 59, 69, 0.60);
	background-color: rgba(180, 59, 69, 0.14);
}

.vp-features.features-2col .vp-feature-item{
	flex-basis: calc(50% - 3rem);
}

@media (max-width: 719px) {
	.vp-features.features-2col .vp-feature-item{
		flex-basis: 100%;
	}
}

.tk-footer {
    display: none;
}

.vp-tabs-nav { display: none; }
.vp-tabs-nav:has(button[aria-selected="false"]) { display: block; }
.vp-tab { border-radius: var(--tab-border-radius) !important; }

.vp-card-title {
    color: #b43b45;
    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
  }

